# quiz-generator

./: .gitignore  README.md  pyproject.toml  quizGen  quizGen.ipynb  requirements.txt  userstory13_app.py  userstory22.py  userstory43.py  userstory60_app.py
src/: Userstory43.py  app.py
src/inputs/: explanation_tab.py  file_tab.py  terminal_tab.py  text_tab.py
src/phases/: algorithms.py  llm_client.py  preprocessing.py  question_types.py  quiz_generation.py  quiz_generator.py  quizzes.py
src/terminal/: difficulty.py  question_pools.py  question_tags.py  shuffle.py
tests/: preprocessing_test.py  question_creation_test.py  quiz_generation_test.py
tests/preprocessing/: anyfile_test.py  file_test.py  multi_file_test.py  preprocessing_test.py  questtype_test.py
tests/question_creation/: question_creation_test.py
tests/quiz_generation/: download_test.py  shuffle_quiz_test.py
